--- a/src/index.html
+++ b/src/index.html
@@ -10,12 +10,16 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <!-- bootswatch -->
     <link rel="stylesheet" href="https://bootswatch.com/4/materia/bootstrap.min.css">
-    <!-- font awesome -->
+ 
     
   
 </head>
 
 <body>
   <app-root></app-root>
+
+
+
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
 </html>
